--- a/BlazorPwa.csproj
+++ b/BlazorPwa.csproj
@@ -5,6 +5,7 @@
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
     <BlazorEnableTimeZoneSupport>false</BlazorEnableTimeZoneSupport>
     <BlazorWebAssemblyPreserveCollationData>false</BlazorWebAssemblyPreserveCollationData>
+    <BlazorCacheBootResources>false</BlazorCacheBootResources>
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
